--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "build:dev": "webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
+    "@angular/common": "2.0.0-1.5.3",
+    "@angular/compiler": "2.0.0-1.5.3",
+    "@angular/core": "2.0.0-1.5.3",
     "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/platform-server": "2.0.0-rc.4",
+    "@angular/http": "2.0.0-1.5.3",
+    "@angular/platform-browser": "2.0.0-1.5.3",
+    "@angular/platform-browser-dynamic": "2.0.0-1.5.3",
+    "@angular/platform-server": "2.0.0-1.5.3",
     "@angular/router": "3.0.0-alpha.6",
-    "@angular/upgrade": "2.0.0-rc.4",
+    "@angular/upgrade": "2.0.0-1.5.3",
     "angular2-jwt": "0.1.14",
     "bootstrap": "3.3.6",
     "core-js": "2.4.0",
